# claude-plugins

./: .gitignore  CLAUDE.md  Makefile  README.md  check-requirements  chromadb  install.ps1  install.sh
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json
docker/: Dockerfile  (+5 more)
plugins/jarvis-todoist/mcp-server/: http_app.py  pyproject.toml  server.py  todoist_api.py
plugins/jarvis-todoist/mcp-server/tests/: test_todoist_api.py
plugins/jarvis/mcp-server/: http_app.py  protocol.py  pyproject.toml  server.py
plugins/jarvis/mcp-server/defaults/formats/: markdown.md
plugins/jarvis/mcp-server/tests/: conftest.py  test_auto_extract_config.py  test_chunking.py  test_commit.py  test_config.py  test_expansion.py  test_extract_observation.py  test_file_ops.py  test_format_support.py  test_http_app.py  test_memory.py  test_memory_crud.py  test_memory_files.py  test_namespaces.py  test_paths.py  test_platform_utils.py  test_promotion.py  test_prompt_search.py  test_protocol.py  test_query.py  test_remove.py  test_retrieve.py  test_scoring.py  test_secret_scan.py  test_server.py  test_server_early_exit.py  test_store.py  test_system_check.py  test_tier2.py  test_worklog.py
plugins/jarvis/mcp-server/tools/: __init__.py  auto_extract_config.py  chunking.py  commit.py  config.py  expansion.py  file_ops.py  format_support.py  git_common.py  git_ops.py  memory.py  memory_crud.py  memory_files.py  namespaces.py  paths.py  platform_utils.py  promotion.py  query.py  remove.py  retrieve.py  scoring.py  secret_scan.py  store.py  system_check.py  tier2.py
(+94 files in other folders)
