[project]
name = "jarvis-todoist-api"
version = "1.5.2"
description = "Todoist REST API tools for Jarvis"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "todoist-api-python>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
jarvis-todoist-api = "server:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
